<resources>
    <string name="app_name">Damage Reports</string>

    <string name="logo">logo</string>
    <string name="navigation_drawer_open">Άνοιγμα μενού πλοήγησης</string>
    <string name="navigation_drawer_close">Κλείσιμο μενού πλοήγησης</string>

    <string name="brands">Μάρκες</string>
    <string name="no_report_with_id">Δεν βρέθηκε αναφορά με κωδικό %1$s</string>
    <string name="no_damage_with_id">Δεν βρέθηκε ζημιά με κωδικό %1$s</string>
    <string name="search">Αναζήτηση</string>
    <string name="new_brand_name">Εισάγετε όνομα για την καινούρια μάρκα</string>
    <string name="new_model_name">Εισάγετε όνομα για το καινούριο μοντέλο</string>
    <string name="new_part_name">Εισάγετε όνομα για το ανταλλακτικό</string>
    <string name="new_part_price">Εισάγετε τιμή για το ανταλλακτικό</string>
    <string name="brand_exists">Υπάρχει ήδη μάρκα με όνομα %1$s , θέλετε σίγουρα να συνεχίσετε;</string>
    <string name="model_exists">Υπάρχει ήδη μοντέλο με όνομα %1$s στην μάρκα %2$s , θέλετε σίγουρα να συνεχίσετε;</string>
    <string name="delete_brand_question">Είστε σίγουροι πως θέλετε να διαγράψετε αυτή τη μάρκα; \n H απόφαση αυτή δεν μπορεί να αναιρεθεί</string>
    <string name="delete_model_question">Είστε σίγουροι πως θέλετε να διαγράψετε αυτό το μοντέλο; \n H απόφαση αυτή δεν μπορεί να αναιρεθεί</string>
    <string name="edit_name">Εισάγετε το καινούριο όνομα</string>
    <string name="edit_price">Εισάγετε το καινούρια τιμή</string>
    <string name="damage_reports">Αναφορές Βλαβών</string>
    <string name="view_report">Προβολή αναφοράς</string>
    <string name="view_damage">Προβολή ζημιάς</string>
    <string name="edit_report">Τροποποίηση αναφοράς</string>
    <string name="select_create_report">Επιλέξτε/δημιουργήστε αναφορά</string>
    <string name="select_create_brand">Επιλέξτε/δημιουργήστε μάρκα</string>
    <string name="select_create_model">Επιλέξτε/δημιουργήστε μοντέλο</string>
    <string name="select_create_part">Επιλέξτε/δημιουργήστε ανταλλακτικό</string>
    <string name="name">Ονομασία</string>
    <string name="description">Περιγραφή</string>
    <string name="brand">Μάρκα</string>
    <string name="select_brand">Επιλέξτε Μάρκα</string>
    <string name="model">Μοντέλο</string>
    <string name="select_model">Επιλέξτε Μοντέλο</string>
    <string name="reorder">Αναδιοργάνωση</string>
    <string name="damage_thumbnail">Φωτογραφία Προβλήματος</string>
    <string name="save">Αποθήκευση</string>
    <string name="cancel">Ακύρωση</string>
    <string name="delete_report_question">Σίγουρα θέλετε να διαγράψετε την αναφορα;\nΗ διαγραφή ΔΕΝ ΜΠΟΡΕΙ ΝΑ ΑΝΑΙΡΕΘΕΙ</string>
    <string name="error_selecting_brand">Υπήρξε πρόβλημα κατά την επιλογή μάρκας, παρακαλώ δοκιμάστε ξανα</string>
    <string name="error_selecting_model">Υπήρξε πρόβλημα κατά την επιλογή μοντέλου, παρακαλώ δοκιμάστε ξανα</string>
    <string name="error_selecting_damage">Υπήρξε πρόβλημα κατά την εύρεση ζημιάς, παρακαλώ δοκιμάστε ξανα</string>
    <string name="error_locating_brand">Υπήρξε πρόβλημα κατά την εύρεση μάρκας με κωδικό %1$s, παρακαλώ δοκιμάστε ξανα</string>
    <string name="error_locating_part">Υπήρξε πρόβλημα κατά την εύρεση του ανταλλακτικού με κωδικό %1$s, παρακαλώ δοκιμάστε ξανα</string>
    <string name="error_locating_model">Υπήρξε πρόβλημα κατά την εύρεση μοντέλου με κωδικό %1$s, παρακαλώ δοκιμάστε ξανα</string>
    <string name="error_updating_part_quantity">Υπήρξε πρόβλημα κατά την ενημέρωση της ποσότητας, παρακαλώ δοκιμάστε ξανά</string>
    <string name="error_deleting_part">Υπήρξε πρόβλημα κατά την διαγραφή του ανταλλακτικού %$1</string>
    <string name="error_item_used">Δεν μπορείτε να διαγράψετε την εγγραφή γιατί χρησιμοποιείται ήδη</string>
    <string name="dismiss">OK</string>
    <string name="undo_message">Σίγουρα θέλετε να αναιρέσετε τις αλλαγές που έχετε κάνει;</string>
    <string name="brand_not_found">Δεν βρέθηκε η μάρκα με κωδικό %1$s</string>
    <string name="model_not_found">Δεν βρέθηκε το μοντέλο με κωδικό %1$s</string>
    <string name="part_not_found">Δεν βρέθηκε το μοντέλο με κωδικό %1$s</string>
    <string name="damage_not_found">Δεν βρέθηκε ζημιά με κωδικό %1$s</string>
    <string name="app_busy">Η εφαρμογή είναι απασχολημένη, παρακαλώ δοκιμάστε ξανά σε λίγο</string>
    <string name="no_brand_selected">Πρέπει να επιλέξετε μάρκα πριν επιλέξετε μοντέλο</string>
    <string name="no_report_selected">Δεν έχετε επιλέξει αναφορά</string>
    <string name="no_damage_selected">Δεν έχετε επιλέξει ζημιά</string>
    <string name="no_report_found">Δεν βρέθηκε η αναφορά</string>
    <string name="no_damage_found">Δεν βρέθηκε η ζημιά</string>
    <string name="report_has_damages">Δε μπορεί να αλλάξει η μάρκα/μοντέλο όταν υπάρχουν ζημιές, αφαιρέστε τις και δοκιμάστε ξανά</string>
    <string name="entry_deleted">Η εγγραφή διαγράφηκε</string>
    <string name="undo">Αναίρεση</string>
    <string name="unknown_save_error">Άγνωστο λάθος κατά την αποθήκευση</string>
    <string name="error_saving_changes">Υπήρξε πρόβλημα κατά την αποθήκευση %1$s</string>
    <string name="no_item_deleted">Δεν έχει γίνει κάποια διαγραφή πρόσφατα</string>
    <string name="symbol_subtract">-</string>
    <string name="symbol_add">+</string>
    <string name="image">image</string>
    <string name="all">Όλα</string>
    <string name="attach_to">Σύνδεση με</string>
    <string name="cannot_add_damage_with_no_brand_model">Πρέπει να επιλέξετε μάρκα και μοντέλο πριν να προσθέσετε ζημιά</string>
    <string name="cannot_add_parts_with_no_brand_model">Πρέπει να επιλέξετε μάρκα και μοντέλο πριν να προσθέσετε ανταλλακτικό</string>
    <string name="error_selecting_part">Υπήρξε πρόβλημα κατά την επιλογή ανταλλακτικού, δοκιμάστε ξανά</string>
    <string name="error_part_selected">Έχετε ήδη επιλέξει το ανταλλακτικό %1$s</string>
    <string name="no_brand_name">Δεν έχετε δώσει όνομα μάρκας</string>
    <string name="no_model_name">Δεν έχετε δώσει όνομα μοντέλου</string>
    <string name="no_part_name">Δεν έχετε δώσει το όνομα του ανταλλακτικού</string>
    <string name="no_part_price">Λάθος τιμή για ανταλλακτικό</string>
    <string name="error_incorrect_part">Αυτό το ανταλακτικό δε μπορεί να χρησιμοποιηθεί σε αυτό το συνδυασμό μοντέλου/μάρκας</string>
    <string name="total_damage_price">Συνολική αξία ζημιάς</string>
    <string name="error">Error %1$s</string>
    <string name="switch_to_dark">Αλλαγή σε σκοτεινό Θέμα</string>
    <string name="switch_to_light">Αλλαγή σε φωτεινό Θέμα</string>
</resources>
